--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   },
   "peerDependencies": {
     "react-native": ">=0.36.0",
-    "react-native-background-fetch": "2.0.x"
+    "react-native-background-fetch": ">= 2.0.x"
   }
 }
